# fast-tfai

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  build.sh  docker.py  pyproject.toml  run.sh
conf/: cats_vs_dogs.yaml  template.yaml
fast_tfai/callbacks/: lr_finder.py
fast_tfai/dataset/: dataset_abc.py  dataset_builder.py  multilabel_dataset.py
fast_tfai/models/: custom_cnn.py  densenet.py  depthwise.py  mobilenet.py  model_builder.py  resnet.py  test_custom_model.py
fast_tfai/trainer/: train.py  train_multilabel.py
fast_tfai/utils/: console.py  names_generator.py  preprocess.py  utils.py  validate_args.py
notebooks/: augmentations.ipynb  extract_backbone_weights.ipynb  full_test_heatmap.ipynb  heatmap_timing.ipynb  multilabel_dataset.ipynb  multilabel_heatmap.ipynb  onnx_explorer.ipynb  onnx_test.ipynb  ood.ipynb  read_history.ipynb  tensorflow_test.ipynb
