[tool.poetry]
name = "fast-tfai"
version = "0.0.1"
description = "Easy and Fast Training of Deep Learning Computer Vision models"
authors = ["svazzole <svazzole@gmail.com>"]
license = "GPL 3"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.22.1"
opencv-python = "^4.5.5"
scikit-learn = "^1.0.2"
tqdm = "^4.62.3"
pandas = "^1.4.0"
onnxruntime-gpu = ">=1.11.0,<1.14.0"
tf2onnx = "^1.9.3"
rich = "^12.2.0"
albumentations = "^1.1.0"
tensorflow = "^2.7.1"
tensorflow-addons = "^0.15.0"
iterative-stratification = "^0.1.7"
llvmlite = ">= 0.38.1"
matplotlib = "^3.5.1"
mlflow-skinny = "^2.2.2"

[tool.poetry.dev-dependencies]
pre-commit = "^3.0.4"
flake8 = "^4.0.1"
mypy = "^0.942"
isort = "^5.10.1"
black = "^22.3.0"
graphviz = "^0.20.1"
pydot = "^1.4.2"
yellowbrick = "^1.4"
seaborn = "^0.11.2"
ipykernel = "^6.7.0"
jupyter = "^1.0.0"
Pillow = "^9.0.0"

[tool.poetry.scripts]
train = "fast_tfai.trainer.train:train"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
sections=['FUTURE', 'STDLIB', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']

[tool.mypy]
follow_imports = "skip"
no_strict_optional = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.1.3"]
build-backend = "poetry.core.masonry.api"
